Edite el archivo herramientas.html y estilo_herramienta.css por segunda vez, haciendo un cambio extremo en todo el documento.

--- a/plataforma/herramientas.html
+++ b/plataforma/herramientas.html
@@ -3,45 +3,140 @@
 <head>
 	<title>Herramientas</title>
 	<link rel="stylesheet" type="text/css" href="css/estilo_herramienta.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-	<nav>
-		<div align="center"><img class="ade" src="herramientas/ade.png"></div>
-		<hr color="black" size=3 width="200">
-
-		<div class="titulo1" align="center">ADE te brinda las mejores herramientas para aprender y evaluar de manera dinámica</div>
-	</nav>
-
-	<section >
-		<div align="center" class="cuadro1" >
-			<img class="img1" src="herramientas/1.png">
-		
-		</div>
-
-		<h1 class="t1">Evaluación</h1>
-		
-		<div align="center" class="cuadro2">
-		<p>Realiza evaluaciones de cada tema visto para <br>calificar el rendimineto de tus estudiantes</p>
-</div>
-
-
-		<h1 class="t2">Simulacros</h1>
-		
-		<div align="center" class="cuadro3">
+	<main>
+		<!--Encabezado--->
+		<div class="encabezado">
+			<div >
+				<img class="ade" src="herramientas/ade.png">
+			</div>
+			<p class="linea"></p>
 			
-			<p>Descubre nuevas formas de evaluar a tus <br>estudiantes, mientras aprenden de manera visual y dinámica</p>
-			
+			<div>
+				<p class="titulo_ade"><strong>ADE</strong> te brinda las mejores herramientas para aprender y evaluar <br> de manera dinámica</p>
+			</div>
 		</div>
+		<!--Fin de encabezado--->
 
-		<div align="center" class="cuadro4">
-			<img class="img2" src="herramientas/2.png">
-			
+		<!--Inicio herramienta evaluación naranja--->
+		<div class="caja_principal">
+			<!--circulo con imagen--->
+			<div class="cir_naranja">
+				<div class="cir_img">
+					<img src="herramientas/1.png" class="img_1">
+				</div>
+			</div>
+
+			<!--Modulo de texto--->
+			<div class="caja_evaluacion">
+				<div class="titulo_evaluacion">
+					<h1 class="t1">Evaluación</h1>
+				</div>
+				<div class="caja_naranja">
+					<div class="caja_sombra">
+						<div class="texto">
+							<p class="p1">Realiza evaluaciones de cada tema visto para calificar el rendimineto de tus estudiantes.</p>
+						</div>
+					</div>
+				</div>
+
+			</div>
+
 		</div>
+		<!--Fin herramienta evaluación--->
+
 		
-	</section>
+		<!--Inicio herramienta simulacro azul--->
+		
+		<div class="caja_principal">
+			<!--Cuadro de texto -->
+			<div class="caja_simulacro">
+				<div class="titulo_simulacro">
+					<h1>Simulacros</h1>
+				</div>
+				<div class="cuad_azul">
+					<div class="caja_sombra">
+						<div class="texto">
+							<div>
+								<p class="t">Descubre nuevas formas de evaluar a tus estudiantes ,mientras aprenden de manera visual y dinámica.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
-	
+			<!--Circulo con imagen-->
+			<div class="cir_azul">
+				<div class="cir_img">
+					<div>
+						<img class="img_2" src="herramientas/2.png">
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<!--Fin herramienta simulacro--->
+
+
+		<!--Inicio herramienta entrenamientos naranja--->
+		<div class="caja_principal">
+			<!--circulo con imagen--->
+			<div class="cir_naranja">
+				<div class="cir_img">
+					<img src="herramientas/3.png" class="img_1">
+				</div>
+			</div>
+
+			<!--Modulo de texto--->
+			<div class="caja_evaluacion">
+				<div class="titulo_evaluacion">
+					<h1 class="t1">Evaluación</h1>
+				</div>
+				<div class="caja_naranja">
+					<div class="caja_sombra">
+						<div class="texto">
+							<p class="p1">Los estudiantes tendrán un espacio para practicar de manera dinámica y divertida, compitiendo con los compañeros, y así desmostrar sus conocimientos.</p>
+						</div>
+					</div>
+				</div>
+
+			</div>
+
+		</div>
+		<!--Fin herramienta entrenamientos--->
+
+		<!--Inicio herramienta estadisticas azul--->
+		
+		<div class="caja_principal">
+			<!--Cuadro de texto -->
+			<div class="caja_simulacro">
+				<div class="titulo_simulacro">
+					<h1>Simulacros</h1>
+				</div>
+				<div class="cuad_azul">
+					<div class="caja_sombra">
+						<div class="texto">
+							<div>
+								<p class="t">Descubre nuevas formas de evaluar a tus estudiantes ,mientras aprenden de manera visual y dinámica.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!--Circulo con imagen-->
+			<div class="cir_azul">
+				<div class="cir_img">
+					<div>
+						<img class="img_2" src="herramientas/4.png">
+					</div>
+				</div>
+			</div>
+
+		</div>
+		<!--Fin herramienta estadisticas--->
+	</main>
 </body>
 </html>
