Edite por primera vez el archivo contacto.html y cree el estilo de esta pagina en la carpeta css, el cual se llama estilo_contatcto.css, termine de hacer el encabezado de la pagina y el formulario de contacto de inscripciones, pero aun falta el formulario de contacto de inquietudes

--- a/plataforma/usuarios.html
+++ b/plataforma/usuarios.html
@@ -65,7 +65,7 @@
 
 				<!--Titulo naranja-->
 				<div class="titulo_naranja">
-					<h1>Directivos</h1>
+					<h1>Docentes</h1>
 				</div>
 				<!--Fin titulo naranja-->
 
@@ -112,7 +112,7 @@
 
 				<!--Titulo azul-->
 				<div class="titulo_azul">
-					<h1>Directivos</h1>
+					<h1>Estudiantes</h1>
 				</div>
 
 				<!--Cuadro de texto-->
