subo la union de la pagina de soporte y la intitucion , con correciones en la pagina del index

--- a/plataforma/index.html
+++ b/plataforma/index.html
@@ -211,7 +211,7 @@
 				
 			</div>
 
-			<p class="incrips">¿Quieres inscribir tu Institución? <a class="link" href="contacto.html">Formulario de Incripción</a> </p>
+			<p class="incrips">¿Quieres inscribir tu Institución? <a class="link" target="_blank" href="contacto.html">Formulario de Incripción</a> </p>
 
 			
 		</section>
