correccion de utf-8 y clase hidden en el body

--- a/plataforma/insti.html
+++ b/plataforma/insti.html
@@ -10,7 +10,7 @@
 	<script src="https://kit.fontawesome.com/242df0cab7.js" crossorigin="anonymous"></script>
 	<script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(136817)</script>
 </head>
-<body>
+<body class="hidden">
 	<!-- preloader -->
 	<div class="centrado" id="onload">
 		<img src="herramientas/ade.png">
