--- a/plataforma/herramientas.html
+++ b/plataforma/herramientas.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Herramientas</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/estilo_herramienta.css">
 	<link rel="stylesheet" type="text/css" href="css/inicio.css">
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
