--- a/plataforma/usuarios.html
+++ b/plataforma/usuarios.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Ususarios</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/estilo_usuario.css">
 	<link rel="stylesheet" type="text/css" href="css/inicio.css">
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
