Edite por por segunda vez el archivo contacto.html para desarrollar el formulario de contacto de inquietudes y su respectivo diseño en el archivo estilo_contacto.css

--- a/plataforma/contacto.html
+++ b/plataforma/contacto.html
@@ -20,6 +20,8 @@
 		</div>	
 		<!--Fin de encabezado-->
 
+		<!-------------Formulario contacto de inscripciones-------------------->
+
 		<!--Contenedor principal-->
 		<div class="contenedor_prin">	
 			 <!--Contenedor naranja-->
@@ -28,7 +30,7 @@
 			 	<div class="contenedor_form">
 			 		<!--Formulario-->
 					<form class="formulario">	
-						<fieldset>
+						<fieldset class="sub_caja_1">
 							<p class="titulo1">
 								<strong>CONTACTO DE INSCRIPCIONES</strong>
 							</p>
@@ -41,7 +43,7 @@
 							<input type="text" placeholder="Ciudad-Departamento-Municipio" name="">
 							<input type="text" placeholder="Numero de usuarios" name="">
 							<input type="text" placeholder="Comentarios adicionales" name="">
-							<p class="w">
+							<p class="contenedor_boton_enviar">
 								<input type="submit" class="btn_enviar" placeholder="Enviar">	
 							</p>
 						</fieldset>
@@ -52,11 +54,68 @@
 			 </div>
 			 <!--Fin contenedor naranja-->
 
+		<!-------------Fin formulario contacto de inscripciones-------------------->
+
+
+		<!-------------Inicio contenedor de imagen---------->
 			 <div class="contenedor_img">
 			 	<div class="contenedor_img1">
-			 		<img class="e" src="contacto/2.png">
+			 		<img class="imagen" src="contacto/2.png">
 			 	</div>
 			 </div>
+		<!-------------Fin contenedor de imagen---------->
+
+
+		<!-------------Formulario contacto de inquietudes-------------------->
+
+			<!--Contenedor azul-->
+			 <div class="contenedor_azul">
+			 	<!--Contenedor formulario-->
+			 	<div class="contenedor_form">
+			 		<!--CoFormulario-->
+			 		<form class="formulario">
+			 			<fieldset class="sub_caja_2">
+			 				<p class="titulo2">
+								<strong>CONTACTO DE INQUIETUDES</strong>
+							</p>
+							<p style="margin-bottom: 40px;" class="texto">Llena los siguientes datos y
+							ponte en contacto con nosotros</p>
+							<input style="order-left: none;border-top: none;border-right:
+							 none;border-bottom: 4px solid #0499D8;margin-bottom: 20px;
+							margin-left: 14px;width: 240px;background: #F5F5F5;outline: none;" class="espacio_1" type="text" placeholder="Nombre" name="">
+
+							<input style="order-left: none;border-top: none;border-right:
+							 none;border-bottom: 4px solid #0499D8;margin-bottom: 20px;
+							margin-left: 14px;width: 240px;background: #F5F5F5;outline: none;" type="text" placeholder="Correo electronico" name="">
+
+							<p style="color:#9B9A9A;">
+							<label>¿En que podemos ayudarte?</label></p>
+							<div class="contenedor_text_area">
+								<div class="caja_azul">
+									<div class="contenedor_texto">
+										<input style="border-left: 4px solid #0499D8;border-top: 4px solid #0499D8;border-right:
+							 				4px solid #0499D8;border-bottom: 4px solid #0499D8;margin-bottom: 20px;
+											width: 242px; height: 100px; background: #F5F5F5;outline: none;" type="text" placeholder="" name="">
+									</div>
+								</div>
+							</div>
+							<!--Contenedor de boton-->
+							<p class="contenedor_boton">
+								<input style="margin-left: 230px;
+								margin-bottom: 10px;
+								border-left: 1px solid #0499D8;
+								border-top: 1px solid #0499D8;
+								border-bottom: 4px solid #0499D8;
+								border-right: 4px solid #0499D8;
+								outline: none;" type="submit" class="btn_enviar" placeholder="Enviar">	
+							</p>
+
+			 			</fieldset>
+			 		</form>
+			 	</div>
+			 	
+			 </div>
+		 <!-------------Fin formulario contacto de inscripciones-------------------->
 		</div>
 		<!--Fin contenedor principal-->
 
