Agrego la union con la pagina contacto, la pagina bot  y lagunas correcciones de lo que se subio anterioirmente(cuadros de color pagina institucional  y modales con gif)

--- a/plataforma/bot.html
+++ b/plataforma/bot.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Herramientas</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="css/estilo_herramienta.css">
-	<link rel="stylesheet" type="text/css" href="css/inicio.css">
+	<title>Bot</title>
+	<link rel="stylesheet" type="text/css" href="css/bot.css">
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
+	<link rel="stylesheet" type="text/css" href="css/inicio.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/242df0cab7.js" crossorigin="anonymous"></script>
-	<script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(136817)</script>
+	
 </head>
-<body>
+<body class="hidden"  >
 
-	<!-- preloader -->
 	<div class="centrado" id="onload">
 		<img src="herramientas/ade.png">
 		<div class="lds-circle"><div></div></div>
@@ -25,8 +24,8 @@
 					<img src="inicio/logo.png">
 				</div>
 				<div class="enlaces" id="enlaces">
-					<a href="index.html"  target="_blank" id="enlace-nosotros" class="btn-header">NOSOTROS</a>
-					<a href="insti.html" target="_blank" id="enlace-usuarios" class="btn-header">INSTITUCIÓN</a>
+					<a href="nosotors.html"  target="_blank" id="enlace-nosotros" class="btn-header">NOSOTROS</a>
+					<a href="insti.html" target="_blank" id="enlace-usuarios" class="btn-header">INSTITTUCIÓN</a>
 					<a href="usuarios.html" target="_blank" id="enlace-usuarios" class="btn-header">USUARIOS</a>
 					<a href="herramientas.html" target="_blank" id="enlace-herramientas" class="btn-header">HERRAMIENTAS</a>
 					<a href="contacto.html" target="_blank" id="enlace-contacto" class="btn-header">CONTACTO</a>
@@ -137,140 +136,24 @@
 		</div>
 	</div>
 
+
+	<!--bot -->
 	<main>
-		<!--Encabezado--->
-		<div class="encabezado2">
-			<div >
-				<img class="ade" src="herramientas/ade.png">
-			</div>
-			<p class="lineas"></p>
-			
+			<section class="cont-Bot">
 			<div>
-				<p class="titulo_ade"><strong>ADE</strong> te brinda las mejores herramientas para aprender y evaluar <br> de manera dinámica</p>
-			</div>
-		</div>
-		<!--Fin de encabezado--->
+				<div class="BOT">
 
-		<!--Inicio herramienta evaluación naranja--->
-		<div class="caja_principal">
-			<!--circulo con imagen--->
-			<div class="cir_naranja">
-				<div class="cir_img">
-					<img src="herramientas/1.png" class="img_1">
+					<div ><img class="adeB" src="herramientas/ade.png"></div>
+					<p class="lineasB"></p>
+					<div >
+					<p class="tituloB">Bot Coversacional </p></div>
 				</div>
+				<img src="bot/1.png">
 			</div>
 
-			<!--Modulo de texto--->
-			<div class="caja_evaluacion">
-				<div class="titulo_evaluacion">
-					<h1 class="t1">Evaluación</h1>
-				</div>
-				<div class="caja_naranja">
-					<div class="caja_sombra">
-						<div class="textoh">
-							<p class="p1">Realiza evaluaciones de cada tema visto para calificar el rendimineto de tus estudiantes.</p>
-						</div>
-					</div>
-				</div>
-
-			</div>
-
-		</div>
-		<!--Fin herramienta evaluación--->
-
-		
-		<!--Inicio herramienta simulacro azul--->
-		
-		<div class="caja_principal">
-			<!--Cuadro de texto -->
-			<div class="caja_simulacro">
-				<div class="titulo_simulacro">
-					<h1  class="t1">Simulacros</h1>
-				</div>
-				<div class="cuad_azul">
-					<div class="caja_sombra">
-						<div class="textoh">
-							<div>
-								<p class="t">Descubre nuevas formas de evaluar a tus estudiantes ,mientras aprenden de manera visual y dinámica.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!--Circulo con imagen-->
-			<div class="cir_azul">
-				<div class="cir_img">
-					<div>
-						<img class="img_2" src="herramientas/2.png">
-					</div>
-				</div>
-			</div>
-
-		</div>
-		<!--Fin herramienta simulacro--->
-
-
-		<!--Inicio herramienta entrenamientos naranja--->
-		<div class="caja_principal">
-			<!--circulo con imagen--->
-			<div class="cir_naranja">
-				<div class="cir_img">
-					<img src="herramientas/3.png" class="img_1">
-				</div>
-			</div>
-
-			<!--Modulo de texto--->
-			<div class="caja_evaluacion">
-				<div class="titulo_evaluacion">
-					<h1 class="t1">Entrenamiento</h1>
-				</div>
-				<div class="caja_naranja">
-					<div class="caja_sombra">
-						<div class="textoh">
-							<p class="p1">Los estudiantes tendrán un espacio para practicar de manera dinámica y divertida, compitiendo con los compañeros, y así desmostrar sus conocimientos.</p>
-						</div>
-					</div>
-				</div>
-
-			</div>
-
-		</div>
-		<!--Fin herramienta entrenamientos--->
-
-		<!--Inicio herramienta estadisticas azul--->
-		
-		<div class="caja_principal">
-			<!--Cuadro de texto -->
-			<div class="caja_simulacro">
-				<div class="titulo_simulacro">
-					<h1  class="t1">Estadisticas</h1>
-				</div>
-				<div class="cuad_azul">
-					<div class="caja_sombra">
-						<div class="textoh">
-							<div>
-								<p class="t">Con el desarrollo de evaluaciones, simulacros y entrenamientos, lleva u control estadístico del nivel académico de cada asignatura.</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<!--Circulo con imagen-->
-			<div class="cir_azul">
-				<div class="cir_img">
-					<div>
-						<img class="img_2" src="herramientas/4.png">
-					</div>
-				</div>
-			</div>
-
-		</div>
-		<!--Fin herramienta estadisticas--->
+			<iframe src="https://webchat.snatchbot.me/19bf2782fcdd666eef5e65180f5131d961d7a5c0722af3e57879a1264cb6461b"></iframe>
+			</section>
 	</main>
-	<div data-bot-id="136817"></div>
-
 	<!-- footer-->
 	<footer>
 		<div class="fazul">
@@ -328,9 +211,9 @@
 
 
 	</footer>
-
-
 	<script src="js/menu.js"></script>
 	<script src="js/jquery.js"></script>
+
+
 </body>
 </html>
