--- a/plataforma/menu.html
+++ b/plataforma/menu.html
@@ -22,8 +22,8 @@
 					<img src="inicio/logo.png">
 				</div>
 				<div class="enlaces" id="enlaces">
-					<a href="nosotors.html"  target="_blank" id="enlace-nosotros" class="btn-header">NOSOTROS</a>
-					<a href="insti.html" target="_blank" id="enlace-usuarios" class="btn-header">INSTITTUCIÓN</a>
+					<a href="index.html"  target="_blank" id="enlace-nosotros" class="btn-header">NOSOTROS</a>
+					<a href="insti.html" target="_blank" id="enlace-usuarios" class="btn-header">INSTITUCIÓN</a>
 					<a href="usuarios.html" target="_blank" id="enlace-usuarios" class="btn-header">USUARIOS</a>
 					<a href="herramientas.html" target="_blank" id="enlace-herramientas" class="btn-header">HERRAMIENTAS</a>
 					<a href="contacto.html" target="_blank" id="enlace-contacto" class="btn-header">CONTACTO</a>
