--- a/plataforma/soporte.html
+++ b/plataforma/soporte.html
@@ -25,8 +25,8 @@
 					<img src="inicio/logo.png">
 				</div>
 				<div class="enlaces" id="enlaces">
-					<a href="nosotors.html"  target="_blank" id="enlace-nosotros" class="btn-header">NOSOTROS</a>
-					<a href="insti.html" target="_blank" id="enlace-usuarios" class="btn-header">INSTITTUCIÓN</a>
+					<a href="index.html"  target="_blank" id="enlace-nosotros" class="btn-header">NOSOTROS</a>
+					<a href="insti.html" target="_blank" id="enlace-usuarios" class="btn-header">INSTITUCIÓN</a>
 					<a href="usuarios.html" target="_blank" id="enlace-usuarios" class="btn-header">USUARIOS</a>
 					<a href="herramientas.html" target="_blank" id="enlace-herramientas" class="btn-header">HERRAMIENTAS</a>
 					<a href="contacto.html" target="_blank" id="enlace-contacto" class="btn-header">CONTACTO</a>
@@ -205,9 +205,9 @@
 				</div>
 				<div class="soporte1S">
 					<div class="imagen2S">
-						<a  href="bot.html"><img class="img1S" src="soporte/5.png"></a>
+						<a  href="bot.html" target="_blank"><img class="img1S" src="soporte/5.png"></a>
 					</div>
-					<a class="LS" href="bot.html">
+					<a class="LS" href="bot.html" target="_blank">
 						<div class="textoS">
 
 						<br><h1 class="amarilloS">Bot Conversasional </h1><br>
@@ -218,11 +218,11 @@
 				</div>
 				<div class="soporte1S">
 					<div class="imagen2S">
-						<a href="contacto.html">
+						<a href="contacto.html" target="_blank">
 							<img class="img1S" src="soporte/7.png">
 						</a>
 					</div>
-					<a class="LS" href="contacto.html">
+					<a class="LS" href="contacto.html" target="_blank">
 						<div class="textoS">
 
 						<br><h1  class="azulS">Comunícate con Nosotros</h1><br>
