--- a/plataforma/bot.html
+++ b/plataforma/bot.html
@@ -24,7 +24,7 @@
 					<img src="inicio/logo.png">
 				</div>
 				<div class="enlaces" id="enlaces">
-					<a href="nosotors.html"  target="_blank" id="enlace-nosotros" class="btn-header">NOSOTROS</a>
+					<a href="index.html"  target="_blank" id="enlace-nosotros" class="btn-header">NOSOTROS</a>
 					<a href="insti.html" target="_blank" id="enlace-usuarios" class="btn-header">INSTITTUCIÓN</a>
 					<a href="usuarios.html" target="_blank" id="enlace-usuarios" class="btn-header">USUARIOS</a>
 					<a href="herramientas.html" target="_blank" id="enlace-herramientas" class="btn-header">HERRAMIENTAS</a>
