--- a/plataforma/menu.html
+++ b/plataforma/menu.html
@@ -122,7 +122,7 @@
 		<div class="modal modal-close">
 			<span class="close"> <i class="fas fa-times"></i></span>
 			
-			<img  src="sesion/ADE.png" class="logoSesion">
+			<img  src="sesion/ade.png" class="logoSesion">
 				<!--Contenedor principal-->
 			<div class="contenedor_prinSesion">	
 				<!--Formulario-->
@@ -233,7 +233,7 @@
 
 			<div class="divImagen">
 				<img src="sesion/9.png" alt="" class="imgRegistroIzq">
-				<img src="sesion/ADE.png" class="logoRegistro">
+				<img src="sesion/ade.png" class="logoRegistro">
 				<img src="sesion/10.png" alt="" class="imgRegistroDer">
 			</div>
 			<div class="contenedor_prinRegistro">
