--- a/bot.html
+++ b/bot.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/menu.css">
 	<link rel="stylesheet" type="text/css" href="css/inicio.css">
 	<link rel="stylesheet" type="text/css" href="css/registro.css">
+	<link rel="stylesheet" type="text/css" href="css/sesion.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/242df0cab7.js" crossorigin="anonymous"></script>
 	
