correccion para que aparezca el logo en la pestaña

--- a/herramientas.html
+++ b/herramientas.html
@@ -11,6 +11,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/242df0cab7.js" crossorigin="anonymous"></script>
 	<script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(136817)</script>
+	<link rel="icon" type="image/png" href="inicio/bombillo.png" sizes="32x32">
+
 </head>
 <body>
 
