--- a/bot.html
+++ b/bot.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/sesion.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/242df0cab7.js" crossorigin="anonymous"></script>
+	<link rel="icon" type="image/png" href="inicio/bombillo.png" sizes="32x32">
 	
 </head>
 <body class="hidden"  >
