--- a/error404.html
+++ b/error404.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/error404.css">
+	<link rel="icon" type="image/png" href="inicio/bombillo.png" sizes="32x32">
 
 </head>
 <body>
