--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="css/registro.css">
 	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
 	<script src="https://kit.fontawesome.com/242df0cab7.js" crossorigin="anonymous"></script>
+	<link rel="icon" type="image/png" href="inicio/bombillo.png" sizes="32x32">
 </head>
 <body class="hidden"  >
 	
