correccion de informacion en las herramientas

--- a/herramientas.html
+++ b/herramientas.html
@@ -372,13 +372,13 @@
 			<!--Cuadro de texto -->
 			<div class="caja_simulacro">
 				<div class="titulo_simulacro">
-					<h1  class="t1">Simulacros</h1>
+					<h1  class="t1">Entrenamiento</h1>
 				</div>
 				<div class="cuad_azul">
 					<div class="caja_sombra">
 						<div class="textoh">
 							<div>
-								<p class="t">Descubre nuevas formas de evaluar a tus estudiantes ,mientras aprenden de manera visual y dinámica.</p>
+								<p class="t">Los estudiantes tendrán un espacio para practicar de manera dinámica y divertida, reforzando los temas vistos y evaluados durante el periodo académico.</p>
 							</div>
 						</div>
 					</div>
@@ -410,12 +410,13 @@
 			<!--Modulo de texto--->
 			<div class="caja_evaluacion">
 				<div class="titulo_evaluacion">
-					<h1 class="t1">Entrenamiento</h1>
+					<h1 class="t1">Simulacros</h1>
 				</div>
 				<div class="caja_naranja">
 					<div class="caja_sombra">
 						<div class="textoh">
-							<p class="p1">Los estudiantes tendrán un espacio para practicar de manera dinámica y divertida, compitiendo con los compañeros, y así desmostrar sus conocimientos.</p>
+							<p class="p1">El estudiante podrá realizar ejercicios de practica , para ver que tanto aprendió durante el entrenamiento , y recibirá incentivos de acuerdo a su desempeño.
+							Compitiendo con los compañeros, y así demostrar sus conocimientos.</p>
 						</div>
 					</div>
 				</div>
@@ -437,7 +438,7 @@
 					<div class="caja_sombra">
 						<div class="textoh">
 							<div>
-								<p class="t">Con el desarrollo de evaluaciones, simulacros y entrenamientos, lleva u control estadístico del nivel académico de cada asignatura.</p>
+								<p class="t">Con el desarrollo de evaluaciones, simulacros y entrenamientos, lleva un control estadístico del nivel académico de cada estudiante en sus respectivas asignaturas .</p>
 							</div>
 						</div>
 					</div>
